--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="EcW-aW-da7">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,11 +18,11 @@
                         <viewControllerLayoutGuide type="bottom" id="fNP-ag-Z5Q"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="9Ls-Pi-wet">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t21-yf-Em7" userLabel="Pager">
-                                <rect key="frame" x="143.5" y="471" width="88" height="8"/>
+                                <rect key="frame" x="143.66666666666666" y="582" width="88" height="8"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="88" id="Gfp-lW-Pdg"/>
@@ -54,7 +54,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.96470588235294119" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
@@ -81,7 +81,7 @@
                         <viewControllerLayoutGuide type="bottom" id="bSN-c1-ep4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yTJ-NM-MdL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -104,7 +104,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wop-Gb-Z01"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lwp-Wr-uBj">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -122,7 +122,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2BW-qd-DtV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="6zx-Kv-Ji3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -147,7 +147,7 @@
                         <viewControllerLayoutGuide type="bottom" id="QWo-4s-K73"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Sm1-ca-Rqq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -171,7 +171,7 @@
                         <viewControllerLayoutGuide type="bottom" id="yGh-4Z-OCo"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4zv-TK-Onf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -192,7 +192,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Nwf-Rb-0fH" customClass="SWNavigationController" customModule="Wheel" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WDH-YJ-Bpg">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -213,7 +213,7 @@
                         <viewControllerLayoutGuide type="bottom" id="jRu-nd-eHa"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wxW-6D-XIk">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -235,21 +235,21 @@
                         <viewControllerLayoutGuide type="bottom" id="gxO-eG-5M7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SHE-Gm-7eZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wheelgui/launchbackground" translatesAutoresizingMaskIntoConstraints="NO" id="iYf-68-6nR" userLabel="background">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wheelgui/launchicon" translatesAutoresizingMaskIntoConstraints="NO" id="KeE-8t-AEv" userLabel="icon">
-                                <rect key="frame" x="82" y="219" width="211" height="168"/>
+                                <rect key="frame" x="82" y="292" width="211" height="168"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="211" id="8NY-He-Adp"/>
                                     <constraint firstAttribute="height" constant="168" id="kAQ-Ib-9kI"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kAv-wK-PdJ">
-                                <rect key="frame" x="24" y="437" width="327" height="31"/>
+                                <rect key="frame" x="24" y="510" width="327" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="MOW-at-Tdk"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="327" id="e55-Ik-qGY"/>
@@ -300,8 +300,8 @@
                             <constraint firstItem="d3m-Ph-qER" firstAttribute="centerX" secondItem="SHE-Gm-7eZ" secondAttribute="centerX" id="DPB-Y6-XUN"/>
                             <constraint firstItem="kAv-wK-PdJ" firstAttribute="centerX" secondItem="SHE-Gm-7eZ" secondAttribute="centerX" id="FgD-ih-cxa"/>
                             <constraint firstItem="iYf-68-6nR" firstAttribute="centerX" secondItem="SHE-Gm-7eZ" secondAttribute="centerX" id="Hb0-RB-ml4"/>
+                            <constraint firstItem="KeE-8t-AEv" firstAttribute="centerY" secondItem="SHE-Gm-7eZ" secondAttribute="centerY" constant="-30" id="OuY-q6-BvD"/>
                             <constraint firstItem="iYf-68-6nR" firstAttribute="height" secondItem="SHE-Gm-7eZ" secondAttribute="height" id="jfq-al-e7l"/>
-                            <constraint firstItem="KeE-8t-AEv" firstAttribute="top" secondItem="SHE-Gm-7eZ" secondAttribute="top" constant="219" id="ks8-eR-ukI"/>
                             <constraint firstItem="iYf-68-6nR" firstAttribute="width" secondItem="SHE-Gm-7eZ" secondAttribute="width" id="lJq-EO-gUg"/>
                             <constraint firstItem="kAv-wK-PdJ" firstAttribute="top" secondItem="KeE-8t-AEv" secondAttribute="bottom" constant="50" id="vHy-ld-Kwp"/>
                         </constraints>
@@ -321,6 +321,6 @@
         <image name="wheelgui/launchicon" width="208" height="167"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="X2M-VB-YeA"/>
+        <segue reference="JsK-hI-aH2"/>
     </inferredMetricsTieBreakers>
 </document>
