--- a/Wheel/Base.lproj/Main.storyboard
+++ b/Wheel/Base.lproj/Main.storyboard
@@ -67,6 +67,7 @@
                         <segue destination="X86-kb-C2n" kind="show" identifier="WheelsToSubwheel" id="s8X-8a-0AY"/>
                         <segue destination="9Qm-n7-6oy" kind="show" identifier="WheelsToWalkthrough" id="8VK-aq-gYs"/>
                         <segue destination="IhP-sc-3Nb" kind="show" identifier="WheelsToHamburger" id="ex4-oy-JMu"/>
+                        <segue destination="yJc-6s-X2P" kind="show" identifier="WheelsToHistory" id="lhU-wC-rYB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -130,6 +131,7 @@
                     <connections>
                         <segue destination="C39-fp-2fu" kind="unwind" identifier="HamburgerToWheelsWithSwipe" unwindAction="unwindToWheelsWithSegue:" id="yTo-mw-emM"/>
                         <segue destination="C39-fp-2fu" kind="unwind" identifier="HamburgerToWheelsForWalkthrough" unwindAction="unwindToWheelsWithSegue:" id="O3W-Ad-HUQ"/>
+                        <segue destination="C39-fp-2fu" kind="unwind" identifier="HamburgerToWheelsForHistory" unwindAction="unwindToWheelsWithSegue:" id="Rbv-2P-Pjk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mMt-Ei-ul6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -161,6 +163,28 @@
                 <exit id="Tij-yj-lQg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-63" y="660"/>
+        </scene>
+        <!--History View Controller-->
+        <scene sceneID="cKv-2M-vUB">
+            <objects>
+                <viewController id="yJc-6s-X2P" customClass="HistoryViewController" customModule="Wheel" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ylz-m5-BBs"/>
+                        <viewControllerLayoutGuide type="bottom" id="61P-tR-aVg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZPK-vS-VdG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="Mr9-jb-N8r" kind="unwind" identifier="HistoryToWheels" unwindAction="unwindToWheelsWithSegue:" id="vgC-2e-VNX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YWJ-58-dEf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Mr9-jb-N8r" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="601" y="1254"/>
         </scene>
         <!--Recipy-->
         <scene sceneID="KjG-FZ-xIg">
